[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/indy/tile72.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7, 7 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Character" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Character"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0, 0.729412, 0.14902, 0.533333 )

[node name="Attack_N" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Attack_N"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.552941, 0.729412, 0, 0.533333 )

[node name="Attack_S" type="AnimatedSprite" parent="."]
position = Vector2( 0, 32 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Attack_S"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.552941, 0.729412, 0, 0.533333 )

[node name="Attack_W" type="AnimatedSprite" parent="."]
position = Vector2( -32, 0 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Attack_W"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.552941, 0.729412, 0, 0.533333 )

[node name="Attack_E" type="AnimatedSprite" parent="."]
position = Vector2( 32, 0 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Attack_E"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.552941, 0.729412, 0, 0.533333 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -24, 0 )
shape = SubResource( 8 )
disabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2( 0.908641, 0.908641 )
polygon = PoolVector2Array( -7, 6, -6, 7, 6, 7, 7, 6, 7, -6, 6, -7, -6, -7, -7, -6 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.150595, 0.150595 )
polygon = PoolVector2Array( -39, -40, 39, -40, 40, -39, 40, 39, 39, 40, -39, 40, -40, 39, -40, -39 )

[connection signal="animation_finished" from="Character" to="." method="_on_Character_animation_finished"]
